--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
         </div>
 
         <div class="bio">
+            <h2>Introduction</h2>
             <p>
-                &emsp;My name is Michael Conant. I am currently a Computer Science major at CSU East Bay.
-                I originally transfered from DVC and I have been programming for about six years. I have primarily have experience in C++, Java, and Python.
+                &emsp;My name is Michael Conant. I am a transfer student from DVC and currently am a Computer Science major at CSU East Bay.
+                I started programming since around 2016 and have actively been programing since. 
+                I have primarily have experience in C++, Java, and Python but have minor experience in languages such as C# and javascript.
                 I enjoy hiking, camping, and playing video games.
             </p>
         </div>
