--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,8 @@
 
     <div class="container" id="projectsPage">
 
-        <div class="project">
-            <h2 class="title">Banking System</h2>
+        <div class="project" onclick="window.location.href='projects/banking_system.html';">
+            <a><h2 class="title">Banking System</h2></a>
             <p class="description">
                 &emsp;A simple client and server based banking system using Java and Java awt. This program was a collaborative effort. 
                 More details and the source code can be viewed on github <a class="hyperlink" href="https://github.com/michaelconant/CS401-Banking-System"><u>here</u></a>.
@@ -26,34 +26,56 @@
             <img class="picture" src="images/projects/banking_system.png">
         </div>
 
-        <div class="project">
+        <div class="project" id="website" onclick="window.location.href='projects/website.html';">
+            <h2 class="title">This Website</h2>
+            <p class="description">
+                &emsp;This website was made for CS35: Website Devolopmentuses and uses html, css, and javascript.
+                <br>
+                <br>&emsp;If you are viewing the website locally this website is hosted
+                using github pages and can be viewed at <a class="hyperlink" href="https://michaelconant.github.io/CS351-Project/index.html">https://michaelconant.github.io/CS351-Project/index.html</a>. 
+                <br>
+                <br>&emsp;The source code is also posted on my github <a class="hyperlink" href="https://github.com/michaelconant/CS351-Project"> here</a>.
+            </p>
+        </div>
+
+        <div class="project" onclick="window.location.href='projects/inventory_manager.html';">
             <h2 class="title">Inventory Manager</h2>
-            <p class="description">&emsp;A inventory managment tool made in C++ that allows you to view and edit your inventory.</p>
+            <p class="description">
+                &emsp;A inventory managment tool made in C++ that allows you to view and edit your inventory.
+            </p>
             <img class="picture" src="images/projects/inventory_manager.PNG">
         </div>
 
-        <div class="project">
+        <div class="project" onclick="window.location.href='projects/food_ordering_application.html';">
             <h2 class="title">Food Ordering Application</h2>
-            <p class="description">&emsp;Food ordering application built using Java, JavaFX, and SQL.</p>
-            <img class="picture" src="images/projects/food_odering_application.png">
+            <p class="description">
+                &emsp;Food ordering application built using Java, JavaFX, and SQL.
+            </p>
+            <img class="picture" src="images/projects/food_ordering_application.png">
         </div>
         
-        <div class="project">
+        <div class="project" onclick="window.location.href='projects/snake.html';">
             <h2 class="title">Snake</h2>
-            <p class="description">&emsp;Simple version of the game of the classic game of snake built using C++.</p>
+            <p class="description">
+                &emsp;Simple version of the game of the classic game of snake built using C++.
+            </p>
             <img class="picture" src="images/projects/snake.PNG">
         </div>
 
-        <div class="project">
-            <h2 class="title">Sudoku Verifier</h2>
-            <p class="description">&emsp;A tool to verify a sudoku solution built using C++.</p>
-            <img class="picture" src="images/projects/sudoku.PNG">
+        <div class="project" onclick="window.location.href='projects/world_generation.html';">
+            <h2 class="title">World Generation</h2>
+            <p class="description">
+                &emsp;A personal project made in Unity to learn C# and how to use perlin noise to generate terrain.
+            </p>
+            <img class="picture" src="images/projects/world_generation.png">
         </div>
 
-        <div class="project">
-            <h2 class="title">World Generation</h2>
-            <p class="description">&emsp;A personal project made in Unity to learn C# and how to use perlin noise to generate terrain.</p>
-            <img class="picture" src="images/projects/world_generation.png">
+        <div class="project" onclick="window.location.href='projects/sudoku_verifier.html';">
+            <h2 class="title">Sudoku Verifier</h2>
+            <p class="description">
+                &emsp;A tool to verify a sudoku solution using multithreading built using C++.
+            </p>
+            <img class="picture" src="images/projects/sudoku_verifier.PNG">
         </div>
 
     </div>
