--- a/projects/snake.html
+++ b/projects/snake.html
@@ -20,7 +20,7 @@
     <div class="projectContainer">
         
         <div class="mainImg">
-            <img src="../images/projects/snake.PNG">
+            <img src="../images/projects/snake.png">
         </div>
 
         <div class="description">
