--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
             <p class="description">
                 &emsp;A inventory managment tool made in C++ that allows you to view and edit your inventory.
             </p>
-            <img class="picture" src="images/projects/inventory_manager.PNG">
+            <img class="picture" src="images/projects/inventory_manager.png">
         </div>
 
         <div class="project" onclick="window.location.href='projects/food_ordering_application.html';">
@@ -59,7 +59,7 @@
             <p class="description">
                 &emsp;Simple version of the game of the classic game of snake built using C++.
             </p>
-            <img class="picture" src="images/projects/snake.PNG">
+            <img class="picture" src="images/projects/snake.png">
         </div>
 
         <div class="project" onclick="window.location.href='projects/world_generation.html';">
@@ -75,7 +75,7 @@
             <p class="description">
                 &emsp;A tool to verify a sudoku solution using multithreading built using C++.
             </p>
-            <img class="picture" src="images/projects/sudoku_verifier.PNG">
+            <img class="picture" src="images/projects/sudoku_verifier.png">
         </div>
 
     </div>
