--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
         <div class="bio">
             <h2>Introduction</h2>
             <p>
-                &emsp;My name is Michael Conant. I am a transfer student from DVC and currently am a Computer Science major at CSU East Bay.
+                &emsp;My name is Michael Conant. I completed my Associate's Degree for Computer Science at DVC transfer student from DVC. 
+                I then transfered to CSU East Bay where I currently am a Computer Science major working towards my bachelor's degree.
                 I started programming since around 2016 and have actively been programing since. 
                 I have primarily have experience in C++, Java, and Python but have minor experience in languages such as C# and javascript.
-                I enjoy hiking, camping, and playing video games.
+                I my free time I also like to hike, camp, and play video games.
             </p>
         </div>
     </div>
