--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <div class="bio">
             <h2>Introduction</h2>
             <p>
-                &emsp;My name is Michael Conant. I completed my Associate's Degree for Computer Science at DVC transfer student from DVC. 
+                &emsp;My name is Michael Conant. I completed my Associate's Degree for Computer Science at DVC. 
                 I then transfered to CSU East Bay where I currently am a Computer Science major working towards my bachelor's degree.
-                I started programming since around 2016 and have actively been programing since. 
-                I have primarily have experience in C++, Java, and Python but have minor experience in languages such as C# and javascript.
-                I my free time I also like to hike, camp, and play video games.
+                I started programming around 2016 and have actively been programing since by taking classes and working on personal projects. 
+                I primarily have experience in C++, Java, and Python but have minor experience in other languages such as C# and JavaScript.
+                In my free time I also like to hike, camp, and play video games.
             </p>
         </div>
     </div>
